# touch

./: CMakeLists.txt  dataprocessor.cpp  fileparser.cpp  main.cpp  measurementdata.h
